Add .opencode-workflow-version file to release zip
Helps users identify which version they have when using workflow-latest.zip

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,14 @@ jobs:
 
       - name: Create zip files
         run: |
+          # Create version file
+          echo "${{ steps.version.outputs.VERSION }}" > .opencode-workflow-version
+
           # Create versioned zip
           zip -r workflow-${{ steps.version.outputs.VERSION }}.zip \
             .opencode/ \
             .tools/ \
+            .opencode-workflow-version \
             AGENTS.md \
             README.md
 
