Rename README.md to WORKFLOW-README.md in release zip
Prevents overwriting user's existing README.md when extracting

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,16 @@ jobs:
           # Create version file
           echo "${{ steps.version.outputs.VERSION }}" > .opencode-workflow-version
 
+          # Rename README.md to avoid conflicts with user's README
+          cp README.md WORKFLOW-README.md
+
           # Create versioned zip
           zip -r workflow-${{ steps.version.outputs.VERSION }}.zip \
             .opencode/ \
             .tools/ \
             .opencode-workflow-version \
             AGENTS.md \
-            README.md
+            WORKFLOW-README.md
 
           # Create latest zip (same content, stable filename)
           cp workflow-${{ steps.version.outputs.VERSION }}.zip workflow-latest.zip
